Header design finished with placeholder navigation icon button and correct spacing. Development of trialing begun with integration between template and navigation models, still to be completed. Priority is to finish all 3 versions of navigation.

--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -1,22 +1,37 @@
+.max-width-div {
+    max-width: 1500px;
+    margin: 0 auto;
+}
+
 
 /* Positions gradient container at the corner of the page with a fixed width, height, and a specified gradient pattern from the design process*/
 .header-container {
     display: flex;
     position: absolute;
-    width: 1500px;
     height: 115px;
     background-image: linear-gradient(90deg, rgba(17, 84, 113, 1) 35%, rgba(0, 121, 145, 1) 67%, rgba(70, 155, 136, 1) 83%);
     align-items: center;
     justify-content: center;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+.header-nav-icon {
+    position: relative;
+    left: 50px;
 }
 
 #header-title {
     color: #ebebeb;
     width: 608px;
-    left: 157px;
+    position: relative;
+    left: 100px;
     text-align: center;
+    font-family: 'Lunasima', sans-serif;
+    font-size: 45px;
 }
 
-#header-image {
-    left: 1440px;
+.header-pattern {
+    position: relative;
+    left: 185px; /* moves pattern to right side of the header without intefering with the alignment of other items */
 }
